Move title into expand body in MDX-files

--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -71,7 +71,9 @@ $$
 \end{aligned}
 $$
 
-<Expand title="Toon met meer tussenstappen">
+<Expand>
+
+Toon met meer tussenstappen
 
 $$
 \begin{aligned}
