--- a/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
@@ -63,7 +63,9 @@ $$
 \end{aligned}
 $$
 
-<Expand title="Uitbreiding: dubbele pijlen">
+<Expand>
+
+Uitbreiding: dubbele pijlen
 
 Er staat niet voor niets een _dubbele pijl_ ($\Leftrightarrow$) tussen de vergelijkingen in plaats van een enkele pijl ($\Rightarrow$ of $\Leftarrow$). Je kan namelijk van de laatste vergelijking ook terug naar de eerste vergelijking gaan. De omvorming is _omkeerbaar_:
 $$
@@ -131,7 +133,9 @@ $$
 $$
 **En we hebben $x$ gevonden!!!** 🎉💃💪
 
-<Expand title="Uitbreiding: via een andere weg">
+<Expand>
+
+Uitbreiding: via een andere weg
 
 Als we in de stap met de keuze tussen $\orange{3}$ en $-6$, kiezen om eerst de $\orange{3}$ weg te werken in plaats van de $6$, vinden we natuurlijk hetzelfde:
 
