--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -126,7 +126,9 @@ $$
     plaats van gewoon de "verandering van de functiewaarde tussen $x_1$ en
     $x_2$".
 
-<Expand title="Waarom zorgt die deling door $\orange{x_2} - \orange{x_1}$ voor een gemiddelde?">
+<Expand>
+
+Waarom zorgt die deling door $\orange{x_2} - \orange{x_1}$ voor een gemiddelde?
 
 Stel dat je de **gemiddelde** score wilt berekenen die de leerlingen van een bepaalde klas haalden op een test. Dan ga je alle punten optellen en **delen door het totaal aantal testen**. Door te delen door het totaal aantal testen, krijg je de gemiddelde score **per test**.
 
@@ -141,7 +143,9 @@ We zeggen dat deze formule de **gemiddelde verandering van de functiewaarde** be
 Het is belangrijk om te weten dat we die formule niet enkel kunnen gebruiken om gemiddelde snelheid te berekenen, maar voor nog veel andere soorten van _gemiddelde verandering_.
 De formule wordt zelfs zo vaak gebruikt, dat ze een eigen naam heeft gekregen: het **differentiequotiënt**.
 
-<Expand title="Waar komt de naam differentiequotiënt vandaan?">
+<Expand>
+
+Waar komt de naam differentiequotiënt vandaan?
 
 Nu denk je misschien: "Een differ-**watte**?! 🤨" Waar komt die
 naam vandaan? Het woord bestaat uit twee stukken:
