--- a/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
@@ -18,7 +18,9 @@ Enkele voorbeelden:
 -   De eenterm $\orange{-\frac{2}{3}x^2z^2}$ is een product van
     $\orange{-\frac{2}{3}}$, $\orange{x^2}$ en $\orange{z^2}$
 
-<Expand title="Waar is het maalteken naartoe?">
+<Expand>
+
+Waar is het maalteken naartoe?
 
 We hoeven het maalteken ($\cdot$) niet te schrijven wanneer we variabelen met
 elkaar vermenigvuldigen. $a\cdot b^2$ mogen we dus korter schrijven als $ab^2$.
