--- a/src/content/lessen/wiskunde/eentermen/macht/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/macht/index.mdx
@@ -56,7 +56,9 @@ $$
 \end{aligned}
 $$
 
-<Expand title="Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in \mathbb{Q}$)">
+<Expand>
+
+Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in \mathbb{Q}$)
 
 We gaan ervan uit dat alle variabelen in deze les een element zijn van de reële
 getallen. Als je nog niet weet wat reële getallen zijn, mag je ook aannemen
