--- a/src/content/lessen/wiskunde/eentermen/som/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/som/index.mdx
@@ -100,7 +100,9 @@ $$
 \end{aligned}
 $$
 
-<Expand title="Waarom moeten we per soort optellen?">
+<Expand>
+
+Waarom moeten we per soort optellen?
 
 Waarom mogen we enkel de coëfficiënten van **gelijksoortige** eentermen bij
 elkaar zetten? Waarom mogen we in ons voorbeeld
