--- a/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
@@ -87,7 +87,9 @@ $$
 $$
 
 
-<Expand title="Waarom mogen we een minteken vervangen door $(-1)$?">
+<Expand>
+
+Waarom mogen we een minteken vervangen door $(-1)$?
 
 We mogen een minteken altijd vervangen door $(-1)$ omdat een minteken voor een
 factor hetzelfde betekent als "_vermenigvuldig met $-1$_".
@@ -121,7 +123,9 @@ $$
 \end{aligned}
 $$
 
-<Expand title="Waarom mag je alle $(-1)-$en voorop zetten?">
+<Expand>
+
+Waarom mag je alle $(-1)-$en voorop zetten?
 
 De vermenigvuldiging van rationale getallen is **commutatief**. <Mute
 text="(Hetzelfde geldt voor reële getallen.)" /> Dat betekent dat de volgorde
@@ -195,7 +199,9 @@ $$
 $$
 
 
-<Expand title="Waarom mag je de coëfficiënt apart uitrekenen?">
+<Expand>
+
+Waarom mag je de coëfficiënt apart uitrekenen?
 
 
 De vermenigvuldiging van rationale getallen is **commutatief**. <Mute
@@ -263,7 +269,9 @@ $$
 \end{aligned}
 $$
 
-<Expand title="Waarom tellen we de exponenten bij elkaar op?">
+<Expand>
+
+Waarom tellen we de exponenten bij elkaar op?
 
 Stel dat we de volgende eenterm hebben:
 
