--- a/src/content/lessen/fysica/grootheden_eenheden/intro/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/intro/index.mdx
@@ -47,7 +47,9 @@ SI-eenheden:
 | Energie                   | joule             |
 | Snelheid                  | meter per seconde |
 
-<Expand title="Uitbreiding: Hoe lang is een meter?">
+<Expand>
+
+Uitbreiding: Hoe lang is een meter?
 
 We gebruiken een eenheid als "meter" dagelijks. Maar hoe definieer je één meter
 het best? Je zou kunnen voorstellen om een plank te maken van één meter lang om
