--- a/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
@@ -23,7 +23,9 @@ vereenvoudigen van een veelterm doe je zo:
 
 In deze les leggen we elk van die stappen wat verder uit.
 
-<Expand title="Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in\mathbb{Q}$)">
+<Expand>
+
+Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in\mathbb{Q}$)
 
 We gaan ervan uit dat alle variabelen in deze les een element zijn van de reële
 getallen. Als je nog niet weet wat reële getallen zijn, mag je ook aannemen
