Remove title prop of attention shortcode

--- a/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
@@ -182,7 +182,9 @@ $$
 
 ## Samengevat
 
-<Attention title="Benaderingsregels">
+<Attention>
+
+Benaderingsregels
 
 -   De uitkomst van een **optelling of aftrekking** moet hetzelfde **aantal
     cijfers na de komma** hebben als het getal in de berekening met het kleinste
