--- a/src/content/lessen/fysica/krachten_1/intro/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/intro/index.mdx
@@ -92,7 +92,9 @@ in die puntmassa.
 
 ## Samengevat
 
-<Attention title="Kracht">
+<Attention>
+
+Kracht
 
 **Kracht** is een grootheid die beschrijft op welke manier er wordt **geduwd**
 tegen of **getrokken** aan een voorwerp. Wanneer een kracht inwerkt
@@ -101,7 +103,9 @@ op een voorwerp, kan de kracht een **verandering van de snelheid** en/of een
 
 </Attention>
 
-<Attention title="Veld- en contactkrachten">
+<Attention>
+
+Veld- en contactkrachten
 
 -   Een **veldkracht** is een kracht die **op afstand** werkt en het gevolg is
     van een krachtveld zoals het zwaartekrachtsveld;
