--- a/src/content/lessen/fysica/krachten_1/kracht_op_voorwerp/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/kracht_op_voorwerp/index.mdx
@@ -68,7 +68,9 @@ Voor de krachten die inwerken op Maria, ziet dat er als volgt uit:
 
 ## Samengevat
 
-<Attention title="Krachten op een voorwerp">
+<Attention>
+
+Krachten op een voorwerp
 
 Wanneer we _"de krachten op een voorwerp"_ tekenen, tekenen we alle krachten
 die **door andere voorwerpen** worden uitgeoefend **op dat voorwerp**.
@@ -77,7 +79,9 @@ die **door andere voorwerpen** worden uitgeoefend **op dat voorwerp**.
 
 </Attention>
 
-<Attention title="Krachten samenleggen in massapunt">
+<Attention>
+
+Krachten samenleggen in massapunt
 
 We leggen de krachten **samen in een massapunt**. Als massapunt kiezen we een punt dat ongeveer **in het midden van het voorwerp** ligt.
 
