--- a/src/content/lessen/fysica/krachten_1/krachtvector/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/krachtvector/index.mdx
@@ -89,13 +89,17 @@ van het flesje duwt.
 
 ## Samengevat
 
-<Attention title="Vectoriële grootheden">
+<Attention>
+
+Vectoriële grootheden
 
 Een vectoriële grootheid is een grootheid met een **grootte**, een **richting**
 en een **zin**.
 </Attention>
 
-<Attention title="Kracht is een vector">
+<Attention>
+
+Kracht is een vector
 
 Een **krachtvector** $\vec{F}$ heeft **vier eigenschappen**:
 
@@ -108,7 +112,9 @@ Een **krachtvector** $\vec{F}$ heeft **vier eigenschappen**:
 ![](img/grootte_richting_zin.png)
 </Attention>
 
-<Attention title="Schrijfwijze voor krachten">
+<Attention>
+
+Schrijfwijze voor krachten
 
 | Schrijf | Lees |
 |---------|------|
