--- a/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
@@ -118,7 +118,9 @@ maken.
 
 ## Samengevat
 
-<Attention title="Normaalkrachten">
+<Attention>
+
+Normaalkrachten
 
 
 Een normaalkracht $\vec{F}_n$ is een kracht die geleverd wordt **door een
@@ -127,7 +129,9 @@ staat **altijd loodrecht op het steunoppervlak**.
 
 </Attention>
 
-<Attention title="Gewicht">
+<Attention>
+
+Gewicht
 
 
 Het gewicht $\vec{F}_g$ van een ondersteund voorwerp is de **kracht** die
