--- a/src/content/lessen/fysica/krachten_1/resulterende_kracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/resulterende_kracht/index.mdx
@@ -61,7 +61,9 @@ we verwachten. 👍
 
 ## Samengevat
 
-<Attention title="Resulterende kracht tekenen">
+<Attention>
+
+Resulterende kracht tekenen
 
 Wanneer er verschillende krachten inwerken op een voorwerp, kunnen we de
 resulterende kracht tekenen door die krachten vectorieel op te tellen.
