--- a/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
@@ -149,14 +149,18 @@ van richting. De snelheidsvector blijft zoals die was.
 
 ## Samengevat
 
-<Attention title="Snelheidsverandering">
+<Attention>
+
+Snelheidsverandering
 
 Zowel de grootte als de richting van de snelheidsvector $\vec{v}$ kunnen veranderen.
 
 Wanneer de **grootte** verandert, **versnelt of vertraagt** het voorwerp. Wanneer de **richting** verandert, **neemt het voorwerp een bocht**.
 </Attention>
 
-<Attention title="De resulterende kracht bepaalt de snelheidsverandering">
+<Attention>
+
+De resulterende kracht bepaalt de snelheidsverandering
 
 Wanneer $\vec{F}_r$ **dezelfde richting** en **dezelfde zin** heeft als $\vec{v}$, dan **versnelt** het voorwerp.
 
