--- a/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
@@ -125,7 +125,9 @@ hetzelfde aanvoelt qua gewicht als twee voetballen op aarde.
 
 ## Samengevat
 
-<Attention title="Grootte van de zwaartekracht berekenen">
+<Attention>
+
+Grootte van de zwaartekracht berekenen
 
 De grootte van de zwaartekracht op een voorwerp vind je door de massa van dat
 voorwerp te vermenigvuldigen met de zwaarteveldsterkte $g$.
