--- a/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
@@ -127,7 +127,9 @@ $$
 
 ## Samengevat
 
-<Attention title="Vergelijking">
+<Attention>
+
+Vergelijking
 
 Een vergelijking is iets van de vorm
 
@@ -138,7 +140,9 @@ $$
 Waarbij $\text{linkerlid}$ en $\text{rechterlid}$ een of meerdere **onbekenden** bevatten. Vaak is er maar één onbekende, namelijk $x$.
 </Attention>
 
-<Attention title="Oplossingsverzameling">
+<Attention>
+
+Oplossingsverzameling
 
 Een vergelijking is _opgelost_ als je de waarden van de onbekenden vindt waarvoor de gelijkheid klopt. De _oplossingsverzameling_ is de verzameling van die waarden.
 </Attention>
