--- a/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
@@ -187,7 +187,9 @@ is $V = \{-\frac{14}{5}\}$.
 
 ## Samengevat
 
-<Attention title="Oplossen van een vergelijking in de eerste graad met één onbekende">
+<Attention>
+
+Oplossen van een vergelijking in de eerste graad met één onbekende
 
 Om een vergelijking op te lossen van de eerste graad met één onbekende, volgen we drie stappen:
 
