--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
@@ -263,7 +263,9 @@ blote handen uitrekenden!
 
 ## Samengevat
 
-<Attention title="De afgeleide in $x = a$ berekenen">
+<Attention>
+
+De afgeleide in $x = a$ berekenen
 
 
 De afgeleide in $x = a$ van een functie $f(x)$ is gedefinieerd als:
