--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
@@ -190,7 +190,9 @@ afgeleide te vinden**. Hier leren we later meer over!
 
 ## Samengevat
 
-<Attention title="De afgeleide functie van een functie">
+<Attention>
+
+De afgeleide functie van een functie
 
 
 De afgeleide functie $f'(x)$ is de functie die voor elke x-waarde (waarin
