--- a/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
@@ -174,7 +174,9 @@ asymptoot is dus niet afleidbaar op de x-waarde waar de asymptoot zich bevindt.
 
 ## Samengevat
 
-<Attention title="Afleidbaarheid van een functie">
+<Attention>
+
+Afleidbaarheid van een functie
 
 
 Een functie is afleidbaar in $x = a$ als en slechts als de linker- en
@@ -193,7 +195,9 @@ $$
 
 </Attention>
 
-<Attention title="Typische niet-afleidbare punten bij functies">
+<Attention>
+
+Typische niet-afleidbare punten bij functies
 
 
 Volgende punten van een functie zijn nooit afleidbaar:
