--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -231,7 +231,9 @@ Het is belangrijk om in te zien dat deze alle drie **identiek dezelfde berekenin
 
 ## Samengevat
 
-<Attention title="Wat is een differentiequotiënt?">
+<Attention>
+
+Wat is een differentiequotiënt?
 
 Een differentiequotiënt zegt hoeveel de $\green{\text{functiewaarde}}$
 gemiddeld $\orange{\text{per x-eenheid}}$ verandert tussen een gekozen
