--- a/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
@@ -170,7 +170,9 @@ in $x = a$**.
 
 ## Samengevat
 
-<Attention title="De afgeleide als de rico van een raaklijn">
+<Attention>
+
+De afgeleide als de rico van een raaklijn
 
 
 De afgeleide van $f(x)$ in $x = a$ berekent de **rico van de raaklijn** aan de
