--- a/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
@@ -127,7 +127,9 @@ $-4x^\orange{2}y^\blue{3}$, bijvoorbeeld, is van de
 
 ## Samengevat
 
-<Attention title="Wat is een eenterm?">
+<Attention>
+
+Wat is een eenterm?
 
 
 -   Een **eenterm** is een product van getallen en variabelen.
@@ -138,7 +140,9 @@ $-4x^\orange{2}y^\blue{3}$, bijvoorbeeld, is van de
 
 </Attention>
 
-<Attention title="Gelijksoortige eentermen">
+<Attention>
+
+Gelijksoortige eentermen
 
 Twee eentermen zijn **gelijksoortig** als en slechts als ze **hetzelfde
 lettergedeelte** hebben.
