--- a/src/content/lessen/wiskunde/eentermen/macht/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/macht/index.mdx
@@ -254,7 +254,9 @@ een macht.
 
 ## Samengevat
 
-<Attention title="De macht van een eenterm berekenen">
+<Attention>
+
+De macht van een eenterm berekenen
 
 Om de macht van een eenterm te berekenen, doen we het volgende:
 
@@ -265,7 +267,9 @@ Om de macht van een eenterm te berekenen, doen we het volgende:
 
 </Attention>
 
-<Attention title="De wortel van een eenterm berekenen">
+<Attention>
+
+De wortel van een eenterm berekenen
 
 De wortel van een eenterm berekenen we als volgt:
 
