--- a/src/content/lessen/wiskunde/eentermen/som/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/som/index.mdx
@@ -173,7 +173,9 @@ Klaar! 🎉
 
 ## Samengevat
 
-<Attention title="Eentermen optellen en aftrekken">
+<Attention>
+
+Eentermen optellen en aftrekken
 
 Eentermen bij elkaar optellen doe je zo:
 
