--- a/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
@@ -138,7 +138,9 @@ $A$ <Mute>(de oppervlakte)</Mute> gelijk is aan $20~\si{m}^2$.
 
 ## Samengevat
 
-<Attention title="Een variabele stelt een element van een verzameling voor">
+<Attention>
+
+Een variabele stelt een element van een verzameling voor
 
 
 Een variabele is een **symbool** dat een willekeurig **element van een bepaalde
@@ -147,7 +149,9 @@ gebruiken we letters zoals $a$, $b$ en $c$ of $x$, $y$ en $z$ als variabele.
 
 </Attention>
 
-<Attention title="Variabelen invullen">
+<Attention>
+
+Variabelen invullen
 
 Een variabele **invullen** betekent dat je de variabele vervangt door een
 bepaalde waarde.
