--- a/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
@@ -360,7 +360,9 @@ Wat. Een. Prachtige. Eenterm. 😌
 
 ## Samengevat
 
-<Attention title="Eentermen vereenvoudigen">
+<Attention>
+
+Eentermen vereenvoudigen
 
 Het vereenvoudigen van eentermen doe je als volgt:
 
