--- a/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
+++ b/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
@@ -69,13 +69,17 @@ De twee nulpunten zijn aangeduid in het **<span class="orange">oranje</span>**.
 
 ## Samengevat
 
-<Attention title="Definitie nulwaarden">
+<Attention>
+
+Definitie nulwaarden
 
 De **nulwaarden van een functie** zijn de **x-waarden waarvoor de
 functiewaarde gelijk is aan 0**.
 </Attention>
 
-<Attention title="Definitie nulpunten">
+<Attention>
+
+Definitie nulpunten
 
 De **nulpunten van een functie** zijn de punten op de grafiek van die functie
 die als **y-waarde 0 hebben**. Ze zijn de **snijpunten met de x-as**.
