--- a/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
+++ b/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
@@ -178,13 +178,17 @@ Zorgen voor later! 👋
 
 ## Samengevat
 
-<Attention title="Tekenschema">
+<Attention>
+
+Tekenschema
 
 Het **tekenschema van een functie $f$** toont schematisch **het teken van $y$
 voor alle x-waarden** die in het domein van $f$ zitten.
 </Attention>
 
-<Attention title="Tekenschema opstellen">
+<Attention>
+
+Tekenschema opstellen
 
 
 1. Zet de **grenzen van het domein** in het tekenschema;
