--- a/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
+++ b/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
@@ -179,7 +179,9 @@ $$
 $$
 
 
-<Attention title="Verwar de haakjes niet met een vermenigvuldiging!">
+<Attention>
+
+Verwar de haakjes niet met een vermenigvuldiging!
 
 
 Wanneer we "$f(2)$" schrijven, zou je kunnen denken dat we $f$ vermenigvuldigen
@@ -201,7 +203,9 @@ naast een minteken staat... 🤨
 
 ## Samengevat
 
-<Attention title="Wat is een functievoorschrift?">
+<Attention>
+
+Wat is een functievoorschrift?
 
 
 Een functievoorschrift bestaat uit 2 stukken:
@@ -214,7 +218,9 @@ een bepaalde x-waarde**.
 
 </Attention>
 
-<Attention title="De functiewaarde van een x-waarde vinden">
+<Attention>
+
+De functiewaarde van een x-waarde vinden
 
 
 Je kan de **functiewaarde** (of y-waarde) van een bepaalde x-waarde $\orange{x}
