--- a/src/content/lessen/wiskunde/rekenen/volgorde_van_de_bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen/volgorde_van_de_bewerkingen/index.mdx
@@ -56,7 +56,9 @@ $$
 Welke van die manieren is juist? De **volgorde van de bewerkingen** geeft ons enkele
 voorrangsregels voor berekeningen zoals $4 - 5 \cdot 8 ^ 2$.
 
-<Attention title="De volgorde van de bewerkingen">
+<Attention>
+
+De volgorde van de bewerkingen
 
 Bij bewerkingen spreken we de volgende **voorrangsregels** af (A.K.A. _de
 volgorde van de bewerkingen_):
