--- a/src/content/lessen/wiskunde/vector_1/grafisch_optellen/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/grafisch_optellen/index.mdx
@@ -109,7 +109,9 @@ Mat andere woorden is het **optellen van vectoren commutatief**.
 
 ## Samengevat
 
-<Attention title="Kop-staartmethode">
+<Attention>
+
+Kop-staartmethode
 
 
 Bij de kop-staartmethode tekenen we de som van twee vectoren door de **staart
@@ -120,7 +122,9 @@ een vector **van de vrije staart naar de vrije kop**.
 
 </Attention>
 
-<Attention title="Parallellogram-methode">
+<Attention>
+
+Parallellogram-methode
 
 
 Bij de parallellogram-methode tekenen we de som van twee vectoren door de
