--- a/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
@@ -412,7 +412,9 @@ te vermenigvuldigen met elke term van de andere veelterm.
 
 ## Samengevat
 
-<Attention title="Het optellen van veeltermen">
+<Attention>
+
+Het optellen van veeltermen
 
 Het **optellen** van twee veeltermen doe je zo:
 
@@ -421,7 +423,9 @@ Het **optellen** van twee veeltermen doe je zo:
 
 </Attention>
 
-<Attention title="Het aftrekken van veeltermen">
+<Attention>
+
+Het aftrekken van veeltermen
 
 Het **aftrekken** van twee veeltermen gaat zo:
 
@@ -430,7 +434,9 @@ Het **aftrekken** van twee veeltermen gaat zo:
 
 </Attention>
 
-<Attention title="Een veelterm vermenigvuldigen met een eenterm">
+<Attention>
+
+Een veelterm vermenigvuldigen met een eenterm
 
 Het **vermenigvuldigen** van een **veelterm met een eenterm** gaat als volgt:
 
@@ -441,7 +447,9 @@ Het **vermenigvuldigen** van een **veelterm met een eenterm** gaat als volgt:
 
 </Attention>
 
-<Attention title="Een veelterm delen door een eenterm">
+<Attention>
+
+Een veelterm delen door een eenterm
 
 Het **delen van een veelterm door een eenterm** doen we als volgt:
 
@@ -452,7 +460,9 @@ Het **delen van een veelterm door een eenterm** doen we als volgt:
 
 </Attention>
 
-<Attention title="Een veelterm vermenigvuldigen met een andere veelterm">
+<Attention>
+
+Een veelterm vermenigvuldigen met een andere veelterm
 
 Twee veeltermen met elkaar te vermenigvuldigen, doen we zo:
 
