--- a/src/content/lessen/wiskunde/veeltermen/getalwaarde/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/getalwaarde/index.mdx
@@ -38,7 +38,9 @@ $$
 
 De getalwaarde van de veelterm $-5ab^2 + 3a$ voor $\orange{a=2}$ en $\green{b=-1}$ is dus gelijk aan $-4$.
 
-<Attention title="Negatieve getallen tussen haakjes zetten">
+<Attention>
+
+Negatieve getallen tussen haakjes zetten
 
 ⚠️ Merk op dat we de $\green{-1}$ **tussen haakjes** hebben gezet wanneer we
 $\green{b}$ erdoor vervingen. Als je dit niet doet, zou je het kwadraat kunnen
@@ -92,7 +94,9 @@ $$
 
 ## Samengevat
 
-<Attention title="Getalwaarde van een veelterm">
+<Attention>
+
+Getalwaarde van een veelterm
 
 De **getalwaarde** van een veelterm vind je als volgt:
 
