--- a/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
@@ -116,7 +116,9 @@ omdat het gelijk is aan $0$.
 
 De uitkomsten zijn samengevat in de onderstaande tabel.
 
-<Attention title="Te onthouden">
+<Attention>
+
+Te onthouden
 
 De drie **merkwaardige producten** zijn:
 
