--- a/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
@@ -277,7 +277,9 @@ $$
 
 ## Samengevat
 
-<Attention title="Veeltermen vereenvoudigen">
+<Attention>
+
+Veeltermen vereenvoudigen
 
 Een veelterm kan je als volgt vereenvoudigen:
 
