--- a/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
@@ -140,7 +140,9 @@ $$
 
 ## Samengevat
 
-<Attention title="Omzetten naar macht van 10">
+<Attention>
+
+Omzetten naar macht van 10
 
 
 -   Als je de komma $N$ plaatsen **naar rechts** wilt opschuiven:
@@ -150,7 +152,9 @@ $$
 
 </Attention>
 
-<Attention title="Omzetten van een macht van 10">
+<Attention>
+
+Omzetten van een macht van 10
 
 Als je $a \cdot 10^b$ wilt omzetten naar $\ldots\text{iets}\ldots \cdot
 \blue{10^c}$ <Mute>(met $a, b, c \in \mathbb{R}$)</Mute>:
