--- a/src/content/lessen/wiskunde/eentermen/product/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/product/index.mdx
@@ -275,7 +275,9 @@ $$
 
 ## Samengevat
 
-<Attention title="Eentermen vermenigvuldigen">
+<Attention>
+
+Eentermen vermenigvuldigen
 
 Het vermenigvuldigen van eentermen gaat als volgt:
 
@@ -287,7 +289,9 @@ Het vermenigvuldigen van eentermen gaat als volgt:
 
 </Attention>
 
-<Attention title="Eentermen delen">
+<Attention>
+
+Eentermen delen
 
 Het delen van eentermen doe je ze:
 
