--- a/src/content/lessen/wiskunde/functies/intro/index.mdx
+++ b/src/content/lessen/wiskunde/functies/intro/index.mdx
@@ -49,7 +49,9 @@ en de $y$, doen we met een [functievoorschrift](voorschrift).
 
 ## Samengevat
 
-<Attention title="Definitie van een functie">
+<Attention>
+
+Definitie van een functie
 
 Een functie is een verband tussen twee variabelen $x$ en $y$ waarbij er voor
 iedere $x$ **hoogstens één** $y$ bestaat. Hierbij noemen we $x$ de **onafhankelijke
@@ -57,7 +59,9 @@ variabele** en $y$ de **afhankelijke variabele**.
 
 </Attention>
 
-<Attention title="Naamgeving">
+<Attention>
+
+Naamgeving
 
 -   $x$: ingang, onafhankelijke variabele
 -   $y$: uitgang, afhankelijke variabele, functiewaarde van $x$, beeld van $x$
