--- a/src/content/lessen/wiskunde/vector_1/intro/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/intro/index.mdx
@@ -94,7 +94,9 @@ intelligentie...
 
 ## Samengevat
 
-<Attention title="Een vector is een pijl met een grootte, richting en zin">
+<Attention>
+
+Een vector is een pijl met een grootte, richting en zin
 
 
 -   Een vector is een pijl en heeft een grootte, een richting en een zin;
